kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: dashboard-funixprod-deployment
  namespace: 'funixproductions'
  labels:
    app: angular
    service: dashboard

spec:
  replicas: 2
  selector:
    matchLabels:
      app: angular
      service: dashboard
  template:
    metadata:
      namespace: 'funixproductions'
      annotations:
        build-time: "TIME-UPDATE-BUILD-FNG"
      labels:
        app: angular
        service: dashboard
    spec:
      containers:
        - name: angular-dashboard-funixprod
          image: ghcr.io/funixproductions/funixproductions-dashboard:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "750Mi"
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service

metadata:
  namespace: 'funixproductions'
  name: dashboard

spec:
  type: ClusterIP
  selector:
    app: angular
    service: dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
